# psopt

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/alt_joint/: CMakeLists.txt  alt_joint.cxx  alt_joint_no_s.cxx  alt_joint_quat.cxx  dynamics.cpp
examples/cartpole/: CMakeLists.txt  cartpole.cxx  dynamics.cpp  dynamics.h  viz_cartpole.m
examples/manipulact/: CMakeLists.txt  dynamics.cpp  dynamics.h  manipulact.cxx
examples/mj_pendulum/: CMakeLists.txt  dynamics.cpp  mj_pendulum.cxx
include/: mcoder_math.h  mujoco_interface.h  psopt.h
src/: mujoco_interface.cxx
